Split less files

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -5,7 +5,8 @@
     <title>Pizza</title>
 
     <!-- Bootsrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- LESS основний файл -->
     <link rel="stylesheet/less" type="text/css" href="assets/less/main.less"/>
@@ -18,15 +19,15 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-9 left-panel">
+        <div class="col-md-9 col-sm-8 left-panel">
             <div class="row header navbar-fixed-top">
-                <div class="col-md-2 navbar-brand logo text-center"><span>Logo</span></div>
-                <div class="col-md-6">
+                <div class="col-md-2 col-sm-1 navbar-brand logo text-center"><span>Logo</span></div>
+                <div class="col-md-6 col-sm-6">
                     <div class="row">
                         <div class="col-md-12 header-top">
                             <span>(044) 111 0 111</span>
-                            <span>24 години/ 7 днів на тиждень</span>
-                            <span>безкоштовна доставка</span>
+                            <span class="visible-lg-inline-block visible-md-inline-block visible-sm-inline-block">24 години/ 7 днів на тиждень</span>
+                            <span class="visible-lg-inline-block">безкоштовна доставка</span>
                         </div>
                     </div>
                     <div class="row">
@@ -138,7 +139,7 @@
                 </div>
             </div><!-- /content -->
         </div><!-- /left-panel -->
-        <div class="col-md-3 right-panel">
+        <div class="col-md-3 col-sm-2 right-panel">
             <div class="header navbar">
                 <div class="navbar-header">
                     <h4 class="navbar-brand"><b>Замовлення <span class="badge">5</span></b></h4>
@@ -204,7 +205,8 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 <!--Bootsrap JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!--Own JavaScript -->
 <script type="text/javascript" src="assets/js/main.js"></script>
