A little bit more responsive

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -19,10 +19,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-9 col-sm-8 left-panel">
+        <div class="col-lg-9 col-md-8 left-panel">
             <div class="row header navbar-fixed-top">
-                <div class="col-md-2 col-sm-1 navbar-brand logo text-center"><span>Logo</span></div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-lg-2 col-md-1 col-sm-1 navbar-brand logo text-center"><span>Logo</span></div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="row">
                         <div class="col-md-12 header-top">
                             <span>(044) 111 0 111</span>
@@ -36,11 +36,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-lg-1 col-md-2 col-sm-2">
                     <button type="button" class="btn btn-default navbar-btn">Sign in</button>
                 </div>
             </div><!-- /header -->
-            <div class="col-md-12 content">
+            <div class="col-lg-12 content">
                 <div class="row text-center inner-header">
                     <h2>All pizzas  <span class="badge">5</span></h2>
                     <span class="inner-navbar">
@@ -53,7 +53,7 @@
                     </span>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="thumbnail pizza-card">
                             <img src="assets/images/pizza_1.jpg">
                             <span class="label label-danger">Нова</span>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="thumbnail pizza-card">
                             <img src="assets/images/pizza_1.jpg">
                             <span class="label label-danger">Нова</span>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="thumbnail pizza-card">
                             <img src="assets/images/pizza_1.jpg">
                             <span class="label label-danger">Нова</span>
@@ -139,17 +139,17 @@
                 </div>
             </div><!-- /content -->
         </div><!-- /left-panel -->
-        <div class="col-md-3 col-sm-2 right-panel">
+        <div class="col-lg-3 col-md-4 right-panel">
             <div class="header navbar">
                 <div class="navbar-header">
                     <h4 class="navbar-brand"><b>Замовлення <span class="badge">5</span></b></h4>
-                    <a class="navbar-brand pull-right clear">Очистити замовлення</a>
+                    <a class="navbar-brand pull-right clear">Очистити <span class="visible-lg-inline-block">замовлення</span></a>
                 </div>
             </div>
             <div class="content">
                 <div class="row pizza-booked">
                     <div class="col-md-9">
-                        <h3>Імпреза</h3>
+                        <h4>Імпреза</h4>
                         <span class="radius"><img src="assets/images/size-icon.svg"> 30</span>
                         <span class="weight"><img src="assets/images/weight.svg"> 370</span>
                         <p class="buttons">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="row pizza-booked">
                     <div class="col-md-9">
-                        <h3>Імпреза</h3>
+                        <h4>Імпреза</h4>
                         <span class="radius"><img src="assets/images/size-icon.svg"> 30</span>
                         <span class="weight"><img src="assets/images/weight.svg"> 370</span>
                         <p class="buttons">
