Even more responsive

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -19,14 +19,14 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-9 col-md-8 left-panel">
+        <div class="col-lg-9 col-md-8 col-sm-8 col-xs-7 left-panel">
             <div class="row header navbar-fixed-top">
-                <div class="col-lg-2 col-md-1 col-sm-1 navbar-brand logo text-center"><span>Logo</span></div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="col-lg-2 col-md-1 col-sm-2 col-xs-2 navbar-brand logo text-center"><span>Logo</span></div>
+                <div class="col-lg-6 col-md-6 col-sm-4 col-xs-3">
                     <div class="row">
                         <div class="col-md-12 header-top">
                             <span>(044) 111 0 111</span>
-                            <span class="visible-lg-inline-block visible-md-inline-block visible-sm-inline-block">24 години/ 7 днів на тиждень</span>
+                            <span class="visible-lg-inline-block visible-md-inline-block">24 години/ 7 днів на тиждень</span>
                             <span class="visible-lg-inline-block">безкоштовна доставка</span>
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-1 col-md-2 col-sm-2">
+                <div class="col-lg-1 col-md-2 col-sm-2 col-xs-2">
                     <button type="button" class="btn btn-default navbar-btn">Sign in</button>
                 </div>
             </div><!-- /header -->
@@ -62,14 +62,14 @@
                                 <p class="type">М`ясна піца</p>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                                 <div class="row text-center">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
                                         <p class="radius"><img src="assets/images/size-icon.svg"> 30</p>
                                         <p class="weight"><img src="assets/images/weight.svg"> 370</p>
                                         <b><span class="price">99</span></b><br/>
                                         <b><p class="money">грн</p></b>
                                         <a href="#" class="btn btn-success">Купити</a>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
                                         <p class="radius"><img src="assets/images/size-icon.svg"> 40</p>
                                         <p class="weight"><img src="assets/images/weight.svg"> 660</p>
                                         <b><span class="price">169</span></b><br/>
@@ -90,14 +90,14 @@
                                 <p class="type">М`ясна піца</p>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                                 <div class="row text-center">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
                                         <p class="radius"><img src="assets/images/size-icon.svg"> 30</p>
                                         <p class="weight"><img src="assets/images/weight.svg"> 370</p>
                                         <b><span class="price">99</span></b><br/>
                                         <b><p class="money">грн</p></b>
                                         <a href="#" class="btn btn-success">Купити</a>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
                                         <p class="radius"><img src="assets/images/size-icon.svg"> 40</p>
                                         <p class="weight"><img src="assets/images/weight.svg"> 660</p>
                                         <b><span class="price">169</span></b><br/>
@@ -118,14 +118,14 @@
                                 <p class="type">М`ясна піца</p>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                                 <div class="row text-center">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
                                         <p class="radius"><img src="assets/images/size-icon.svg"> 30</p>
                                         <p class="weight"><img src="assets/images/weight.svg"> 370</p>
                                         <b><span class="price">99</span></b><br/>
                                         <b><p class="money">грн</p></b>
                                         <a href="#" class="btn btn-success">Купити</a>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
                                         <p class="radius"><img src="assets/images/size-icon.svg"> 40</p>
                                         <p class="weight"><img src="assets/images/weight.svg"> 660</p>
                                         <b><span class="price">169</span></b><br/>
@@ -139,7 +139,7 @@
                 </div>
             </div><!-- /content -->
         </div><!-- /left-panel -->
-        <div class="col-lg-3 col-md-4 right-panel">
+        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-5 right-panel">
             <div class="header navbar">
                 <div class="navbar-header">
                     <h4 class="navbar-brand"><b>Замовлення <span class="badge">5</span></b></h4>
@@ -148,7 +148,7 @@
             </div>
             <div class="content">
                 <div class="row pizza-booked">
-                    <div class="col-md-9">
+                    <div class="col-md-9 col-sm-10">
                         <h4>Імпреза</h4>
                         <span class="radius"><img src="assets/images/size-icon.svg"> 30</span>
                         <span class="weight"><img src="assets/images/weight.svg"> 370</span>
@@ -160,12 +160,12 @@
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         </p>
                     </div>
-                    <div class="col-md-3 image">
+                    <div class="visible-lg-block visible-md-block visible-sm-block col-md-3 col-sm-2 image">
                         <img src="assets/images/pizza_1.jpg">
                     </div>
                 </div>
                 <div class="row pizza-booked">
-                    <div class="col-md-9">
+                    <div class="col-md-9 col-sm-10">
                         <h4>Імпреза</h4>
                         <span class="radius"><img src="assets/images/size-icon.svg"> 30</span>
                         <span class="weight"><img src="assets/images/weight.svg"> 370</span>
@@ -177,16 +177,15 @@
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         </p>
                     </div>
-                    <div class="col-md-3 image">
+                    <div class="visible-lg-block visible-md-block visible-sm-block col-md-3 col-sm-2 image">
                         <img src="assets/images/pizza_1.jpg">
                     </div>
                 </div>
-
             </div>
             <div class="footer">
                 <div class="row">
                     <div class="col-md-12">
-                        <b><span>Сума замовлення</span><span class="pull-right summ">100500 грн</span> </b>
+                        <b><span>Сума <span class="visible-lg-inline-block visible-md-inline-block visible-sm-inline-block">замовлення</span></span><span class="pull-right summ">500 грн</span> </b>
                         <p><button class="btn btn-success">Замовити</button> </p>
                     </div>
                 </div>
