--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -52,90 +52,8 @@
                         <a class="btn">Вега</a>
                     </span>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-xs-12">
-                        <div class="thumbnail pizza-card">
-                            <img src="assets/images/pizza_1.jpg">
-                            <span class="label label-danger">Нова</span>
-                            <div class="caption">
-                                <h3>Імпреза</h3>
-                                <p class="type">М`ясна піца</p>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <div class="row text-center">
-                                    <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <p class="radius"><img src="assets/images/size-icon.svg"> 30</p>
-                                        <p class="weight"><img src="assets/images/weight.svg"> 370</p>
-                                        <b><span class="price">99</span></b><br/>
-                                        <b><p class="money">грн</p></b>
-                                        <a href="#" class="btn btn-success">Купити</a>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <p class="radius"><img src="assets/images/size-icon.svg"> 40</p>
-                                        <p class="weight"><img src="assets/images/weight.svg"> 660</p>
-                                        <b><span class="price">169</span></b><br/>
-                                        <b><p class="money">грн</p></b>
-                                        <a href="#" class="btn btn-success">Купити</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-xs-12">
-                        <div class="thumbnail pizza-card">
-                            <img src="assets/images/pizza_1.jpg">
-                            <span class="label label-danger">Нова</span>
-                            <div class="caption">
-                                <h3>Імпреза</h3>
-                                <p class="type">М`ясна піца</p>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <div class="row text-center">
-                                    <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <p class="radius"><img src="assets/images/size-icon.svg"> 30</p>
-                                        <p class="weight"><img src="assets/images/weight.svg"> 370</p>
-                                        <b><span class="price">99</span></b><br/>
-                                        <b><p class="money">грн</p></b>
-                                        <a href="#" class="btn btn-success">Купити</a>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <p class="radius"><img src="assets/images/size-icon.svg"> 40</p>
-                                        <p class="weight"><img src="assets/images/weight.svg"> 660</p>
-                                        <b><span class="price">169</span></b><br/>
-                                        <b><p class="money">грн</p></b>
-                                        <a href="#" class="btn btn-success">Купити</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-xs-12">
-                        <div class="thumbnail pizza-card">
-                            <img src="assets/images/pizza_1.jpg">
-                            <span class="label label-danger">Нова</span>
-                            <div class="caption">
-                                <h3>Імпреза</h3>
-                                <p class="type">М`ясна піца</p>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <div class="row text-center">
-                                    <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <p class="radius"><img src="assets/images/size-icon.svg"> 30</p>
-                                        <p class="weight"><img src="assets/images/weight.svg"> 370</p>
-                                        <b><span class="price">99</span></b><br/>
-                                        <b><p class="money">грн</p></b>
-                                        <a href="#" class="btn btn-success">Купити</a>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <p class="radius"><img src="assets/images/size-icon.svg"> 40</p>
-                                        <p class="weight"><img src="assets/images/weight.svg"> 660</p>
-                                        <b><span class="price">169</span></b><br/>
-                                        <b><p class="money">грн</p></b>
-                                        <a href="#" class="btn btn-success">Купити</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row" id="pizza_list">
+                    <!--Pizza will appear here-->
                 </div>
             </div><!-- /content -->
         </div><!-- /left-panel -->
@@ -146,7 +64,7 @@
                     <a class="navbar-brand pull-right clear">Очистити <span class="visible-lg-inline-block">замовлення</span></a>
                 </div>
             </div>
-            <div class="content">
+            <div class="content" id="cart">
                 <div class="row pizza-booked">
                     <div class="col-md-9 col-sm-10">
                         <h4>Імпреза</h4>
