3,4. Change pizza quantity, remove from cart

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -65,40 +65,7 @@
                 </div>
             </div>
             <div class="content" id="cart">
-                <div class="row pizza-booked">
-                    <div class="col-md-9 col-sm-10">
-                        <h4>Імпреза</h4>
-                        <span class="radius"><img src="assets/images/size-icon.svg"> 30</span>
-                        <span class="weight"><img src="assets/images/weight.svg"> 370</span>
-                        <p class="buttons">
-                            <b><span class="price">530</span>грн </b>
-                            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                            <span class="count-label">1</span>
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </p>
-                    </div>
-                    <div class="visible-lg-block visible-md-block visible-sm-block col-md-3 col-sm-2 image">
-                        <img src="assets/images/pizza_1.jpg">
-                    </div>
-                </div>
-                <div class="row pizza-booked">
-                    <div class="col-md-9 col-sm-10">
-                        <h4>Імпреза</h4>
-                        <span class="radius"><img src="assets/images/size-icon.svg"> 30</span>
-                        <span class="weight"><img src="assets/images/weight.svg"> 370</span>
-                        <p class="buttons">
-                            <b><span class="price">530</span>грн </b>
-                            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                            <span class="count-label">1</span>
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </p>
-                    </div>
-                    <div class="visible-lg-block visible-md-block visible-sm-block col-md-3 col-sm-2 image">
-                        <img src="assets/images/pizza_1.jpg">
-                    </div>
-                </div>
+                <!--Booked pizza will appear here.-->
             </div>
             <div class="footer">
                 <div class="row">
