Finished Local storage

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -70,7 +70,7 @@
             <div class="footer">
                 <div class="row">
                     <div class="col-md-12">
-                        <b><span>Сума <span class="visible-lg-inline-block visible-md-inline-block visible-sm-inline-block">замовлення</span></span><span class="pull-right summ">500 грн</span> </b>
+                        <b><span>Сума <span class="visible-lg-inline-block visible-md-inline-block visible-sm-inline-block">замовлення</span></span><span class="pull-right"><span class="summ">500</span> грн</span></b>
                         <p><button class="btn btn-success">Замовити</button> </p>
                     </div>
                 </div>
